objects/ASI_Pricing_Approval__c.object
<CustomObject>
    <fields>
        <fullName>ASI_Advanced_Price_Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advanced Price Setup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approvals7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Advanced_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_Approved_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Base_Price_Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Price Setup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approvals6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Finance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approvals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Last_Reminder_Date__c</fullName>
        <label>Last Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_Logistics_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logistics Team</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approvals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_Pricing_Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change in Customer Margin (Not Budgeted)</fullName>
                </value>
                <value>
                    <fullName>Temporary Price Change (Not Budgeted)</fullName>
                </value>
                <value>
                    <fullName>New Pricing on Key Brands and Customers</fullName>
                </value>
                <value>
                    <fullName>Others - Change in line with guidelines/policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_Pricing_First_Level_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Level Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approvals8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Pricing_Forth_Level_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forth Level Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approval10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Pricing_Second_Level_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Level Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approvals9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Pricing_Team_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Team Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approvals5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Pricing_Third_Level_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Level Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approval9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Pricing_Total_Approval_Levels__c</fullName>
        <formula>IF (
	AND (
		NOT(ISBLANK(ASI_Pricing_First_Level_Approval__c)),
		ISBLANK(ASI_Pricing_Second_Level_Approval__c),
		ISBLANK(ASI_Pricing_Third_Level_Approval__c),
		ISBLANK(ASI_Pricing_Forth_Level_Approval__c)
	),
	1,
	IF (	
		AND (
			NOT(ISBLANK(ASI_Pricing_First_Level_Approval__c)),
			NOT(ISBLANK(ASI_Pricing_Second_Level_Approval__c)),
			ISBLANK(ASI_Pricing_Third_Level_Approval__c),
			ISBLANK(ASI_Pricing_Forth_Level_Approval__c)
		),
		2,
		IF (
			AND (
				NOT(ISBLANK(ASI_Pricing_First_Level_Approval__c)),
				NOT(ISBLANK(ASI_Pricing_Second_Level_Approval__c)),
				NOT(ISBLANK(ASI_Pricing_Third_Level_Approval__c)),
				ISBLANK(ASI_Pricing_Forth_Level_Approval__c)
			),
			3,
			IF (
				AND (
				NOT(ISBLANK(ASI_Pricing_First_Level_Approval__c)),
				NOT(ISBLANK(ASI_Pricing_Second_Level_Approval__c)),
				NOT(ISBLANK(ASI_Pricing_Third_Level_Approval__c)),
				NOT(ISBLANK(ASI_Pricing_Forth_Level_Approval__c))
				),
				4,
				-1				
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Approval Levels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Recall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASI_SSC_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SSC Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approvals4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_SSC_Logistic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SSC Finance</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Approvals3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending First Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Second Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Third Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Forth Approval</fullName>
                </value>
                <value>
                    <fullName>Final Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>DateTime</type>
    </fields>
    <label>Pricing Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_Pricing_Change_Type__c</columns>
        <columns>ASI_Customer_Name__c</columns>
        <columns>ASI_Status__c</columns>
        <columns>ASI_Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Final_Approved</fullName>
        <columns>NAME</columns>
        <columns>ASI_Pricing_Change_Type__c</columns>
        <columns>ASI_Customer_Name__c</columns>
        <columns>ASI_Status__c</columns>
        <columns>ASI_Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_Status__c</field>
            <operation>equals</operation>
            <value>Final Approved</value>
        </filters>
        <label>Final Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>ASI_Pricing_Change_Type__c</columns>
        <columns>ASI_Customer_Name__c</columns>
        <columns>ASI_Status__c</columns>
        <columns>ASI_Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>ASI_Pricing_Change_Type__c</columns>
        <columns>ASI_Customer_Name__c</columns>
        <columns>ASI_Status__c</columns>
        <columns>ASI_Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Pending Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recalled</fullName>
        <columns>NAME</columns>
        <columns>ASI_Pricing_Change_Type__c</columns>
        <columns>ASI_Customer_Name__c</columns>
        <columns>ASI_Status__c</columns>
        <columns>ASI_Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_Status__c</field>
            <operation>equals</operation>
            <value>Recalled</value>
        </filters>
        <label>Recalled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <columns>NAME</columns>
        <columns>ASI_Pricing_Change_Type__c</columns>
        <columns>ASI_Customer_Name__c</columns>
        <columns>ASI_Status__c</columns>
        <columns>ASI_Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASI_Pricing_Approver_Inactive</fullName>
        <active>true</active>
        <errorConditionFormula>OR (
	NOT(ASI_Finance_Manager__r.IsActive),
	NOT(ASI_KAM__r.IsActive),
	NOT(ASI_Logistics_Team__r.IsActive),
	NOT(ASI_SSC_Logistic__r.IsActive),
	NOT(ASI_SSC_Backup__r.IsActive),
	NOT(ASI_Base_Price_Setup__r.IsActive),
	NOT(ASI_Pricing_Team_Backup__r.IsActive),
	NOT(ASI_Pricing_First_Level_Approval__r.IsActive),
	NOT(ASI_Pricing_Second_Level_Approval__r.IsActive),
	NOT(ASI_Pricing_Third_Level_Approval__r.IsActive),
	NOT(ASI_Pricing_Forth_Level_Approval__r.IsActive)
)</errorConditionFormula>
        <errorMessage>Please verify all approvers are active in the system.</errorMessage>
    </validationRules>
</CustomObject>